compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/classObject.kt
class C {
    <!REDECLARATION!>class object<!> {}

    val <!REDECLARATION!>Default<!> = C
}